# ReaMind

./: .gitignore  AGENTS.md  LICENSE  README.md  USER_GUIDE.md
.superpowers/sdd/: task-4-report.md
companion/: pyproject.toml
companion/reamind/: agent.py  bridge.py  config.py  jsonio.py  local_tools.py  mcp_host.py  provider_factory.py  rpp.py  server.py  theme.py
companion/reamind/mcp/: protocol.py  sse.py  stdio.py
companion/reamind/providers/: base.py  fake.py  local.py
companion/reamind/tools/: fx_map.py  library.py  reaper_construction.py  reaper_readonly.py  registry.py
companion/tests/: test_agent.py  test_bridge.py  test_config.py  test_fx_map.py  test_jsonio.py  test_library_tools.py  test_local_provider.py  test_local_tools.py  test_mcp_host.py  test_mcp_protocol.py  test_mcp_runtime.py  test_mcp_sse.py  test_mcp_stdio.py  test_provider_factory.py  test_provider_runtime.py  test_providers.py  test_quarantine.py  test_reaper_construction.py  test_registry.py  test_rpp.py  test_scanner.py  test_server.py  test_theme.py  test_tools.py  test_version.py
docs/: SMOKE.md
docs/superpowers/plans/: 2026-07-14-reamind-foundation.md  2026-07-14-reamind-theming-onboarding.md  2026-07-15-reamind-construction-tools.md  2026-07-15-reamind-library-management.md  (+1 more)
panel/: helpers.lua  ipc.lua  reamind_panel.lua  reamind_selftest.lua  theme.lua
panel/test/: construction_spec.lua  helpers_spec.lua  json_spec.lua  run.lua  theme_spec.lua
panel/tools/: construction.lua  fx_scanner.lua  readonly.lua
scripts/: install_panel.py
templates/: drum_kit_7mic.json
(+5 files in other folders)
