[project]
name = "reamind"
version = "0.1.0"
description = "ReaMind companion — the AI brain for the REAPER assistant panel"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["reamind*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
